coding with the boys - refactor entities and working course with dynamoDb